--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
 
 
 
-        <form action="\predict" method="post">
+        <form action="{{ url_for('predict')}}" method="post">
 
 
             <div class="row">
